src-ken&y/objects/Labor_Transaction__c.object
<CustomObject>
    <customHelpPage>HelpWorkOrder</customHelpPage>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <description>Actual hours for this transaction</description>
        <inlineHelpText>Actual hours for this transaction</inlineHelpText>
        <label>Actual Hours</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assemblies_Completed__c</fullName>
        <description>Assembly quantity completed in this transaction</description>
        <inlineHelpText>Assembly quantity completed in this transaction</inlineHelpText>
        <label>Assemblies Completed</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assemblies_to_MRB__c</fullName>
        <description>Assembly quantity to MRB (Material Review Board) in this trnasaction</description>
        <inlineHelpText>Assembly quantity to MRB (Material Review Board) in this trnasaction</inlineHelpText>
        <label>Assemblies to MRB</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Labor_Tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Labor Tracking</description>
        <inlineHelpText>Lookup to Labor Tracking</inlineHelpText>
        <label>Labor Tracking</label>
        <referenceTo>Labor_Tracking__c</referenceTo>
        <relationshipLabel>Labor Transactions</relationshipLabel>
        <relationshipName>Labor_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Work Order</description>
        <inlineHelpText>Lookup to Work Order</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Labor Transactions</relationshipLabel>
        <relationshipName>Labor_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Labor Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DEPRECATED</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DEPRECATED</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>